--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
 
+    // error..
+    implementation 'org.jboss.logging:jboss-logging:3.4.3.Final'
+
+
     // querydsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
